--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,66 +9,39 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.cqngu.doggie.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:id="@+id/textView" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Camera"
-        android:id="@+id/cameraBttn"
-        android:layout_below="@+id/textView"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_toEndOf="@+id/textView"
-        android:layout_marginTop="46dp" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:id="@+id/cmrBttn"
+        android:layout_marginTop="54dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/myDogsBttn"
+        android:layout_alignStart="@+id/myDogsBttn" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DoggieList"
         android:id="@+id/listBttn"
-        android:layout_below="@+id/cameraBttn"
-        android:layout_alignLeft="@+id/cameraBttn"
-        android:layout_alignStart="@+id/cameraBttn" />
+        android:layout_below="@+id/cmrBttn"
+        android:layout_alignLeft="@+id/myDogsBttn" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CurrentLocation"
         android:id="@+id/locationBttn"
-        android:layout_below="@+id/listBttn"
-        android:layout_alignLeft="@+id/listBttn"
-        android:layout_alignStart="@+id/listBttn" />
+        android:layout_below="@+id/qrBttn"
+        android:layout_alignLeft="@+id/myDogsBttn" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="QR"
         android:id="@+id/qrBttn"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/locationBttn"
-        android:layout_alignStart="@+id/locationBttn" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Code goes here"
-        android:id="@+id/textView5"
-        android:layout_below="@+id/qrBttn"
-        android:layout_alignRight="@+id/locationBttn"
-        android:layout_alignEnd="@+id/locationBttn" />
+        android:layout_below="@+id/listBttn"
+        android:layout_alignLeft="@+id/myDogsBttn" />
 
     <Button
         android:layout_width="wrap_content"
