--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,15 @@
         android:layout_height="wrap_content"
         android:text="My Dogs"
         android:id="@+id/myDogsBttn"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/cmrBttn" />
+        android:layout_below="@+id/myListBttn"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="My List"
+        android:id="@+id/myListBttn"
+        android:layout_below="@+id/cmrBttn"
+        android:layout_alignLeft="@+id/myDogsBttn"
+        android:layout_alignStart="@+id/myDogsBttn" />
 </RelativeLayout>
